# emgapi-v2

./: .coverage.1df0ef7aa538.pid20.X5uJar5x.HFVIdoAf8uZh  .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .talismanrc  .yamllint  CLAUDE.md  Dockerfile  Dockerfile.slurm  README.md  SAST_AUDIT_REPORT.md  Taskfile.yaml  cleanup_manifest.tsv  conftest.py  docker-compose.yaml  manage.py  pyproject.toml  requirements-common.txt  requirements-dev.txt  requirements-sourmash-worker.txt  requirements-tools.txt  requirements.txt  sourmash_django_tasks_detailed_design.md  sourmash_search_architecture_plan.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: release_k8s.yml  test.yml
analyses/: models.py  schemas.py
analyses/admin/: analysis.py  assembly.py  assembly_analysis_batch.py  base.py  publication.py  sample.py  study.py  super_study.py
analyses/base_models/: base_models.py  with_downloads_models.py  with_experiment_type_models.py
analyses/migrations/: 0030_alter_assembler_name.py  0030_analysis_metadata.py  0040_remove_study_has_legacy_data_study_features_and_more.py  0047_superstudy_superstudyimage_superstudystudy_and_more.py  0048_alter_superstudystudy_options.py  0049_publication_studypublication_publication_studies.py  0050_superstudygenomecatalogue_and_more.py  0051_alter_sample_ena_sample.py  0051_more_metadata_and_search_indexes.py  0051_studyanalysisbatch_assemblyanalysisbatch_and_more.py  0052_study_metadata_alter_study_ena_study.py  0052_update_download_groups_to_pathways_and_systems.py  0053_add_assembly_runs_m2m_fields.py  0053_alter_sample_studies.py  0054_migrate_assembly_run_to_m2m.py  0054_sample_sample_title_sample_idx_sample_title_trgm.py  0055_publication_idx_publication_title_trgm_and_more.py  0055_remove_assembly_run_field.py  0056_sample_biome.py  0056_samplerelatedsample_sample_related_samples_and_more.py  0057_analysis_pipeline_version_v6_1.py  0058_assembly_idx_assembly_ena_acc_gin_and_more.py
analyses/tests/: test_admin.py  test_importers.py  (+12 more)
emgapiv2/: config.py  enum_utils.py  feeds.py  model_utils.py  rt.py  settings.py  settings_prefect.py  settings_test.py  settings_worker.py  tasking.py  test_api.py  test_auth.py  test_data_privacy.py  test_db_backend.py  test_feeds.py  test_make_dev_data.py  test_task_settings.py  test_utils.py  urls.py
ena/: admin.py  models.py  tests.py
genomes/: admin.py  apps.py  sourmash.py  tasks.py
kvstore/: admin.py  apps.py  models.py  schemas.py  tests.py
scripts/: check_activate_django_first.py
slurm-dev-environment/: Dockerfile  README.md  docker-compose.yaml
utils/: clean_nextflow_workdirs.py
workflows/: README.md  models.py
(+521 files in other folders)
